WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134399
REGRESSION(
r170008
): [GTK] Layout Tests fast/forms/option-constructor-selected.html and fast/forms/select-live-pseudo-selectors.html crash.
https://bugs.webkit.org/show_bug.cgi?id=134399
Summary
REGRESSION(r170008): [GTK] Layout Tests fast/forms/option-constructor-selecte...
Carlos Alberto Lopez Perez
Reported
2014-06-27 09:35:32 PDT
The following layout tests crash on GTK since
r170008
<
http://trac.webkit.org/r170008
>. fast/forms/option-constructor-selected.html fast/forms/select-live-pseudo-selectors.html I have doubled checked this, and if I revert
r170008
on my computer, this two tests not longer crash. The output of the tests is the following: Tools/Scripts/run-webkit-tests --no-show-results --no-new-test-results --no-sample-on-timeout --results-directory layout-test-results --debug-rwt-logging --release --webkit-test-runner --gtk --retry-failures fast/forms/select-live-pseudo-selectors.html fast/forms/option-constructor-selected.html 18:33:38.649 25004 Using port 'gtk-wk2' 18:33:38.649 25004 Test configuration: <, x86, release> 18:33:38.649 25004 Placing test results in /home/clopez/webkit/webkit/layout-test-results 18:33:38.649 25004 Baseline search path: gtk-wk2 -> wk2 -> gtk -> generic 18:33:38.649 25004 Using Release build 18:33:38.649 25004 Pixel tests disabled 18:33:38.649 25004 Regular timeout: 6000, slow test timeout: 30000 18:33:38.738 25004 "perl Tools/Scripts/webkit-build-directory --configuration --release --gtk" took 0.09s 18:33:38.739 25004 Command line: /home/clopez/webkit/webkit/Tools/jhbuild/jhbuild-wrapper --gtk run /home/clopez/webkit/webkit/WebKitBuild/Release/bin/WebKitTestRunner - 18:33:38.740 25004 18:33:38.740 25004 Collecting tests ... 18:33:38.743 25004 Parsing expectations ... 18:33:38.865 25004 Found 2 tests; running 2, skipping 0. 18:33:38.865 25004 Checking build ... 18:33:38.953 25004 "Tools/Scripts/build-dumprendertree --release --gtk" took 0.09s 18:33:38.953 25004 Output of ['Tools/Scripts/build-dumprendertree', '--release', '--gtk']: 18:33:39.040 25004 "Tools/Scripts/build-webkittestrunner --release --gtk" took 0.09s 18:33:39.040 25004 Output of ['Tools/Scripts/build-webkittestrunner', '--release', '--gtk']: 18:33:39.041 25004 Starting helper ... 18:33:39.041 25004 Checking system dependencies ... 18:33:39.049 25004 "which Xvfb" took 0.01s 18:33:39.063 25004 Expect: 2 passes (2 now, 0 wontfix) 18:33:39.063 25004 Expect: 0 failures (0 now, 0 wontfix) 18:33:39.063 25004 Expect: 0 flaky (0 now, 0 wontfix) 18:33:39.063 25004 18:33:39.063 25004 Sharding tests ... 18:33:39.064 25004 Running 1 WebKitTestRunner. 18:33:39.064 25004 (1 shard). 18:33:39.064 25004 18:33:39.064 25004 Starting 1 worker ... 18:33:39.165 25004 worker/0 starting 18:33:39.190 25004 "ps -eo comm,command" took 0.02s 18:33:41.008 25004 WebProcess crash, pid = None, error_line = #CRASHED - WebProcess 18:33:41.008 25004 killed pid 25049 18:33:41.009 25004 worker/0 fast/forms/option-constructor-selected.html crashed, (stderr lines): 18:33:41.009 25004 1 0x7ffc96979a87 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-3.0.so.0(WTFCrash+0x17) [0x7ffc96979a87] 18:33:41.009 25004 2 0x7ffc94605614 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore26AccessibilityMenuListPopup21didUpdateActiveOptionEi+0x114) [0x7ffc94605614] 18:33:41.009 25004 3 0x7ffc94604d80 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore21AccessibilityMenuList21didUpdateActiveOptionEi+0xa0) [0x7ffc94604d80] 18:33:41.009 25004 4 0x7ffc94ef9cd8 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore14RenderMenuList17setTextFromOptionEi+0xa8) [0x7ffc94ef9cd8] 18:33:41.009 25004 5 0x7ffc94a03c88 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore17HTMLSelectElement12selectOptionEij+0xa8) [0x7ffc94a03c88] 18:33:41.009 25004 6 0x7ffc949f68b0 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore17HTMLOptionElement12insertedIntoERNS_13ContainerNodeE+0x60) [0x7ffc949f68b0] 18:33:41.009 25004 7 0x7ffc9480eafc /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore13ContainerNode24updateTreeAfterInsertionERNS_4NodeE+0x51c) [0x7ffc9480eafc] 18:33:41.009 25004 8 0x7ffc9480fd83 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore13ContainerNode11appendChildEN3WTF10PassRefPtrINS_4NodeEEERi+0x3a3) [0x7ffc9480fd83] 18:33:41.009 25004 9 0x7ffc948100a0 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore13ContainerNode12insertBeforeEN3WTF10PassRefPtrINS_4NodeEEEPS3_Ri+0x220) [0x7ffc948100a0] 18:33:41.009 25004 10 0x7ffc94a01bc9 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore17HTMLSelectElement3addEPNS_11HTMLElementES2_Ri+0x69) [0x7ffc94a01bc9] 18:33:41.010 25004 11 0x7ffc94a05345 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore17HTMLSelectElement9setOptionEjPNS_17HTMLOptionElementERi+0xf5) [0x7ffc94a05345] 18:33:41.010 25004 12 0x7ffc94671869 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore17selectIndexSetterEPNS_17HTMLSelectElementEPN3JSC9ExecStateEjNS2_7JSValueE+0x49) [0x7ffc94671869] 18:33:41.010 25004 13 0x7ffc969580f6 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-3.0.so.0(+0x6470f6) [0x7ffc969580f6] 18:33:41.010 25004 14 0x7ffc969642d3 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-3.0.so.0(+0x6532d3) [0x7ffc969642d3] 18:33:41.010 25004 [1/2] fast/forms/option-constructor-selected.html failed unexpectedly (WebProcess crashed) 18:33:41.011 25004 worker/0 killing driver 18:33:41.011 25004 worker/0 fast/forms/option-constructor-selected.html failed: 18:33:41.011 25004 worker/0 WebProcess crashed 18:33:41.033 25004 "ps -eo comm,command" took 0.02s 18:33:42.869 25004 WebProcess crash, pid = None, error_line = #CRASHED - WebProcess 18:33:42.869 25004 killed pid 25099 18:33:42.871 25004 worker/0 fast/forms/select-live-pseudo-selectors.html crashed, (stderr lines): 18:33:42.871 25004 1 0x7fb7f05a9a87 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-3.0.so.0(WTFCrash+0x17) [0x7fb7f05a9a87] 18:33:42.871 25004 2 0x7fb7ee235614 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore26AccessibilityMenuListPopup21didUpdateActiveOptionEi+0x114) [0x7fb7ee235614] 18:33:42.871 25004 3 0x7fb7ee234d80 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore21AccessibilityMenuList21didUpdateActiveOptionEi+0xa0) [0x7fb7ee234d80] 18:33:42.871 25004 4 0x7fb7eeb29cd8 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore14RenderMenuList17setTextFromOptionEi+0xa8) [0x7fb7eeb29cd8] 18:33:42.872 25004 5 0x7fb7ee633c88 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libwebkit2gtk-3.0.so.25(_ZN7WebCore17HTMLSelectElement12selectOptionEij+0xa8) [0x7fb7ee633c88] 18:33:42.872 25004 6 0x7fb7f049e429 /home/clopez/webkit/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-3.0.so.0(_ZN3JSC8JSObject3putEPNS_6JSCellEPNS_9ExecStateENS_12PropertyNameENS_7JSValueERNS_15PutPropertySlotE+0x3f9) [0x7fb7f049e429] 18:33:42.873 25004 [2/2] fast/forms/select-live-pseudo-selectors.html failed unexpectedly (WebProcess crashed) 18:33:42.873 25004 worker/0 killing driver 18:33:42.873 25004 worker/0 fast/forms/select-live-pseudo-selectors.html failed: 18:33:42.873 25004 worker/0 WebProcess crashed 18:33:42.874 25004 worker/0 exiting 18:33:42.874 25004 worker/0 cleaning up 18:33:42.874 25004 Flushing stdout 18:33:42.874 25004 Flushing stderr 18:33:42.874 25004 Stopping helper 18:33:42.874 25004 Cleaning up port 18:33:42.875 25004 looking for new crash logs 18:33:42.875 25004 summarizing results 18:33:42.883 25004 "ruby --version" took 0.01s 18:33:42.883 25004 Test timing: 18:33:42.883 25004 3.81 total testing time 18:33:42.883 25004 18:33:42.883 25004 Thread timing: 18:33:42.883 25004 worker/0: 2 tests, 3.70 secs 18:33:42.883 25004 3.70 cumulative, 0.46 optimal 18:33:42.883 25004 18:33:42.883 25004 PER TEST TIME IN TESTSHELL (seconds): 18:33:42.883 25004 Median: 0.810 18:33:42.883 25004 Mean: 0.810 18:33:42.883 25004 90th percentile: 0.820 18:33:42.883 25004 99th percentile: 0.820 18:33:42.883 25004 Standard dev: 0.007 18:33:42.883 25004 18:33:42.883 25004 18:33:42.883 25004 10 slowest tests that are not marked as SLOW and did not timeout/crash: 18:33:42.883 25004 18:33:42.883 25004 Tests marked as SLOW: 18:33:42.883 25004 18:33:42.883 25004 Tests that timed out or crashed: 18:33:42.883 25004 fast/forms/select-live-pseudo-selectors.html took 0.8 seconds 18:33:42.883 25004 fast/forms/option-constructor-selected.html took 0.8 seconds 18:33:42.883 25004 18:33:42.883 25004 Time to process slowest subdirectories: 18:33:42.883 25004 fast/forms took 3.7 seconds to run 2 tests. 18:33:42.883 25004 18:33:42.883 25004 18:33:42.883 25004 0 tests ran as expected, 2 didn't: 18:33:42.883 25004 18:33:42.883 25004 Writing JSON files in /home/clopez/webkit/webkit/layout-test-results. 18:33:42.884 25004 Finished writing JSON file for the test results server. 18:33:42.884 25004 Testing completed, Exit status: 2 => Results: 0/2 tests passed (0.0%) => Tests to be fixed (2): 2 crashes (100.0%) => Tests that will only be fixed if they crash (WONTFIX) (0): Regressions: Unexpected crashes (2) fast/forms/option-constructor-selected.html [ Crash ] fast/forms/select-live-pseudo-selectors.html [ Crash ]
Attachments
GDB Backtrace for test fast/forms/select-live-pseudo-selectors.html
(12.87 KB, text/plain)
2014-06-27 09:36 PDT
,
Carlos Alberto Lopez Perez
no flags
Details
GDB Backtrace for test fast/forms/option-constructor-selected.html
(14.42 KB, text/plain)
2014-06-27 09:37 PDT
,
Carlos Alberto Lopez Perez
no flags
Details
Patch proposal
(5.26 KB, patch)
2014-07-01 08:05 PDT
,
Mario Sanchez Prada
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2014-06-27 09:36:54 PDT
Created
attachment 233989
[details]
GDB Backtrace for test fast/forms/select-live-pseudo-selectors.html
Carlos Alberto Lopez Perez
Comment 2
2014-06-27 09:37:32 PDT
Created
attachment 233990
[details]
GDB Backtrace for test fast/forms/option-constructor-selected.html
Carlos Alberto Lopez Perez
Comment 3
2014-06-27 09:38:06 PDT
I have attached two backtraces for the crashes.
Carlos Alberto Lopez Perez
Comment 4
2014-06-27 10:19:16 PDT
I have marked the tests on the GTK TestExpectations as crashing on
https://bugs.webkit.org/show_bug.cgi?id=134400
Mario Sanchez Prada
Comment 5
2014-07-01 02:58:03 PDT
(In reply to
comment #4
)
> I have marked the tests on the GTK TestExpectations as crashing on
https://bugs.webkit.org/show_bug.cgi?id=134400
Thanks for the report, I'll try to investigate this issue soon
Mario Sanchez Prada
Comment 6
2014-07-01 08:05:53 PDT
Created
attachment 234165
[details]
Patch proposal
Mario Sanchez Prada
Comment 7
2014-07-02 02:33:56 PDT
***
Bug 134539
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 8
2014-07-02 02:53:00 PDT
Comment on
attachment 234165
[details]
Patch proposal Clearing flags on attachment: 234165 Committed
r170704
: <
http://trac.webkit.org/changeset/170704
>
WebKit Commit Bot
Comment 9
2014-07-02 02:53:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug